# MCPAgent

./: .env.example  .gitignore  README.md  pyproject.toml
.example-project/: config.yaml  mcp.json  mcpagent.db
.example-project/agents/: architect.md  mslearn-analyst.md  mslearn-architect.md  mslearn-developer.md  mslearn-researcher.md
.example-project/skills/: README.md
.example-project/skills/agent-authoring/: SKILL.md
.example-project/skills/code-review/: SKILL.md
.example-project/skills/workflow-authoring/: SKILL.md
.example-project/workflows/: power-platform-mslearn-news-report.yaml
agents/: README.md  architect.md  assistant.md  default.md  mcp-qa-tester.md  tester.md  web-researcher.md
config/: config.yaml  mcp.example.json  mcp.json
mcp_servers/: README.md
mcp_servers/test_server/: server.py
skills/code-review/: SKILL.md
skills/skill-authoring/: SKILL.md
skills/summarizer/: SKILL.md
skills/workflow-authoring/: SKILL.md
src/mcpagent/: __init__.py  __main__.py  _cron.py  agent.py  agent_presets.py  background.py  cli.py  config.py  context.py  db.py  headless.py  llm.py  mcp_manager.py  memory.py  ops_log.py  scheduler.py  skills.py  storage.py  tools.py  workflow_engine.py  workflow_models.py
workflows/: example-research.yaml
